mono repo with micro frontend

--- a/main-app/tsconfig.json
+++ b/main-app/tsconfig.json
@@ -14,8 +14,9 @@
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "forceConsistentCasingInFileNames": true,
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "federated.d.ts"],
   "exclude": ["node_modules"]
 }
