--- a/micro-frontend/footer/package.json
+++ b/micro-frontend/footer/package.json
@@ -12,12 +12,15 @@
     "@module-federation/nextjs-mf": "^8.8.3",
     "next": "14.2.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.4.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "postcss": "^8",
