--- a/micro-frontend/header/package.json
+++ b/micro-frontend/header/package.json
@@ -12,16 +12,19 @@
     "@module-federation/nextjs-mf": "^8.8.3",
     "next": "14.2.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/tailwindcss": "^3.0.11",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
